--- a/src/MVC5SampleApp/Views/Notice/Create.cshtml
+++ b/src/MVC5SampleApp/Views/Notice/Create.cshtml
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.PublishDate, new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.PublishDate, new { htmlAttributes = new { @class = "form-control datepicker" } })
+                        @Html.TextBoxFor(model => model.PublishDate, new { @class = "form-control datepicker" } )
                         @Html.ValidationMessageFor(model => model.PublishDate)
                     </div>
                 </div>
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Title)
+                        @Html.TextBoxFor(model => model.Title, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Title)
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Headline, new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Headline)
+                        @Html.TextAreaFor(model => model.Headline,3, 80, new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Headline)
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Body, new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Body)
+                        @Html.TextAreaFor(model => model.Body,  10, 80, new { @class = "form-control"})
                         @Html.ValidationMessageFor(model => model.Body)
                     </div>
                 </div>
