--- a/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
+++ b/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
@@ -37,6 +37,12 @@
                             <li>@Html.ActionLink("CSRF", "Index", "Feedback")</li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">JQuery Plugin Demo <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Image Plugins", "Index", "JQueryImage")</li>
+                        </ul>
+                    </li>
 
                     @if (Request.IsAuthenticated)
                     { 
