Added in a jquery zoom demo page

--- a/src/MVC5SampleApp/Views/JQueryImage/Index.cshtml
+++ b/src/MVC5SampleApp/Views/JQueryImage/Index.cshtml
@@ -6,6 +6,10 @@
 <h2>JQuery Image Options</h2>
 
 
+<ul>
 
+    <li>@Html.ActionLink("Slideshow", "Slideshow")</li>
 
-@Html.ActionLink("Slideshow", "Slideshow");
+    <li>@Html.ActionLink("Zoom", "Zoom")</li>
+    
+</ul>
