A first simple typeahead demo

--- a/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
+++ b/src/MVC5SampleApp/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">JQuery Plugin Demo <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Image Plugins", "Index", "JQueryImage")</li>
+                            <li>@Html.ActionLink("Typeahead", "Index", "Typeahead")</li>
                         </ul>
                     </li>
 
