Updated the bloodhound engine to use baseUrl

--- a/src/MVC5SampleApp/Views/Typeahead/Index.cshtml
+++ b/src/MVC5SampleApp/Views/Typeahead/Index.cshtml
@@ -126,7 +126,7 @@
             queryTokenizer: Bloodhound.tokenizers.whitespace,            
             remote:
             {
-                url: 'http://localhost/MVC5SampleApp/Typeahead/states?q=%QUERY',
+                url: baseUrl + '?q=%QUERY',
                 wildcard: '%QUERY',
             }
         });
